--- a/estilo.css
+++ b/estilo.css
@@ -3,12 +3,12 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    background-color: #f4f4f4;
-}
-
-    #fcd1d7;
-	#562135;
-	#c3829e;
-    #e9b1cd;
-    #ffe7de;
+    background-color: #fcd1d7;
+  }
+  
+  h1 {
+    font-size: 36px;
+  }
+  
+  
   
