--- a/estilo.css
+++ b/estilo.css
@@ -12,5 +12,29 @@ body {
     color: #562135;
     text-align: center;
 }
-  
+header {
+  background-color: #c3829e;
+  color: #562135;
+  padding: 10px 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+} 
+
+.logo-image {
+    height: 50px;
+    margin-right: 10px;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
   
