--- a/estilo.css
+++ b/estilo.css
@@ -48,5 +48,10 @@ nav ul li a {
   font-weight: bold;
   font-family: 'Poppins', sans-serif;
 }
+nav ul li a:hover {
+  color: #e9b1cd;
+  text-decoration: underline;
+}
+
 
   
