--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+
 body {
-    background-color: black;
+    
 }
