--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,5 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
 
 body {
-    
+    font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: #ffe7de;
+    color: #562135;
+    text-align: center;
+    padding: 20px;
 }
