--- a/css/estilo.css
+++ b/css/estilo.css
@@ -34,3 +34,19 @@ nav ul {
     padding: 0;
     margin: 0;
 }
+nav ul li {
+    display: inline;
+    margin-right: 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #562135;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: none;
+    color: #562135;
+    font-weight: bold;
+}
