--- a/css/estilo.css
+++ b/css/estilo.css
@@ -34,6 +34,7 @@ header {
     background-color: #ffc2c2;
     max-width: 1200px;
     margin: 0 auto;
+    border-top-left-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
@@ -227,18 +228,4 @@ footer ul li a:hover, footer a:hover {
     transition: background-color 0.3s ease;
     border-radius: 8px;
     padding: 10px;
-}
-
-.loja {
-    max-width: 45%;
-    height: auto;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin: 20px;
-}
-
-.loja:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
